--- a/index.html
+++ b/index.html
@@ -5,35 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kakao Map with Modal</title>
     <style>
-      body,
-      html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        overflow: hidden;
+      body {
+        display: flex;
+        justify-content: center; /* 수평 가운데 정렬 */
+        align-items: center; /* 수직 가운데 정렬 */
       }
 
-      h2 {
-        text-align: center;
-      }
-
-      .modal_btn {
-        display: block;
-        margin: 40px auto;
-        padding: 10px 20px;
-        background-color: royalblue;
-        border: none;
-        border-radius: 5px;
-        color: #fff;
-        cursor: pointer;
-        transition: box-shadow 0.2s;
-      }
-
-      .modal_btn:hover {
-        box-shadow: 3px 4px 11px 0px #00000040;
-      }
-
-      /* 모달 팝업 영역 스타일링 */
       .modal {
         display: none; /* 평소에는 보이지 않도록 설정 */
         position: fixed;
@@ -65,6 +42,12 @@
         color: #fff;
         cursor: pointer;
         transition: box-shadow 0.2s;
+        margin: 5px auto; /* 버튼을 수평으로 가운데 배치 */
+      }
+
+      #modalTitle,
+      #modalContent {
+        text-align: center;
       }
 
       #map {
@@ -77,6 +60,29 @@
       #map.blur {
         filter: blur(5px);
       }
+
+      #site-header {
+        background-color: #cfe5d8d3;
+        height: 65px;
+      }
+
+      #logo {
+        font-size: 2rem; /* 로고의 크기 */
+        font-weight: bold; /* 굵은 글씨 */
+        color: hsla(128, 85%, 47%, 0.233); /* 글씨 색상 */
+        text-transform: uppercase; /* 대문자로 변환 */
+        letter-spacing: 2px; /* 글자 사이 간격 */
+        background: linear-gradient(
+          45deg,
+          #539546,
+          #18d10b
+        ); /* 그라데이션 배경 */
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        padding: 10px 20px;
+        text-align: center;
+      }
     </style>
     <script
       type="text/javascript"
@@ -87,39 +93,28 @@
     <!-- 모달 팝업 -->
     <div class="modal">
       <div class="modal_popup">
-        <h3 id="modalTitle">모달 팝업 타이틀 입니다!</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam,
-          ut facere id ullam ea adipisci et ipsam est quidem commodi ducimus
-          nostrum cum optio non dolor! Quam ipsum nam rem!
-        </p>
+        <h3 id="modalTitle"></h3>
+        <span id="modalContent"></span>
         <button type="button" class="close_btn">닫기</button>
       </div>
     </div>
     <!-- end 모달 팝업 -->
 
     <main>
+      <header id="site-header">
+        <div id="logo">GFOOD</div>
+      </header>
       <section>
-        <h2>모달 팝업</h2>
-        <button type="button" class="modal_btn">
-          클릭하면 모달팝업이 보여집니다
-        </button>
-        <div id="map" style="width: 500px; height: 400px"></div>
+        <div id="map" style="width: 500px; height: 600px"></div>
       </section>
     </main>
 
     <script>
       const modal = document.querySelector(".modal");
-      const modalOpen = document.querySelector(".modal_btn");
       const modalClose = document.querySelector(".close_btn");
       const mapElement = document.getElementById("map");
       const modalTitle = document.getElementById("modalTitle");
-      // 열기 버튼을 눌렀을 때 모달팝업이 열림
-
-      modalOpen.addEventListener("click", function () {
-        modal.style.display = "block";
-        mapElement.classList.add("blur"); // 지도 흐리게
-      });
+      const modalContent = document.getElementById("modalContent");
 
       // 닫기 버튼을 눌렀을 때 모달팝업이 닫힘
       modalClose.addEventListener("click", function () {
@@ -130,35 +125,51 @@
       var mapOption = {
         // 지도를 생성할 때 필요한 기본 옵션
         center: new kakao.maps.LatLng(37.5745, 126.986), // 지도의 중심좌표
-        level: 3, // 지도의 레벨(확대, 축소 정도)
+        level: 4, // 지도의 레벨(확대, 축소 정도)
       };
       var map = new kakao.maps.Map(mapContainer, mapOption); // 지도 생성 및 객체 리턴
 
       // 마커를 표시할 위치와 내용을 가지고 있는 객체 배열입니다
-      fetch("http://127.0.0.1:8000/stores")
-        .then((response) => response.json())
-        .then((data) => {
-          data.forEach((store) => {
-            var marker = new kakao.maps.Marker({
-              map: map, // 마커를 표시할 지도
+      async function loadStores() {
+        try {
+          const response = await fetch("http://127.0.0.1:8000/stores");
+          const stores = await response.json();
+
+          stores.forEach((store) => {
+            const marker = new kakao.maps.Marker({
+              map: map,
               position: new kakao.maps.LatLng(
                 store.x_coordinate,
                 store.y_coordinate
-              ), // 마커의 위치
+              ),
             });
 
-            // 마커에 mouseover 이벤트와 mouseout 이벤트를 등록합니다
-            // 이벤트 리스너로는 클로저를 만들어 등록합니다
-            // for문에서 클로저를 만들어 주지 않으면 마지막 마커에만 이벤트가 등록됩니다
-            kakao.maps.event.addListener(marker, "click", function () {
-              modal.style.display = "block";
-              mapElement.classList.add("blur"); // 지도 흐리게
-              modalTitle.textContent = store.name;
-              console.log(store.idx);
+            kakao.maps.event.addListener(marker, "click", async function () {
+              try {
+                modal.style.display = "block";
+                mapElement.classList.add("blur"); // 지도 흐리게
+                modalTitle.textContent = store.name;
+
+                const menuResponse = await fetch(
+                  `http://127.0.0.1:8000/stores/${store.idx}/menu`
+                );
+                const menuData = await menuResponse.json();
+                var menuList = "";
+                for (i = 0; i < menuData.length; i++) {
+                  menuList += `${menuData[i].name} : ${menuData[i].price}\n`;
+                }
+                modalContent.innerText = menuList;
+              } catch (error) {
+                console.error("Error fetching menu data:", error);
+              }
             });
           });
-        })
-        .catch((error) => console.error("Error:", error));
+        } catch (error) {
+          console.error("Error fetching store data:", error);
+        }
+      }
+
+      loadStores();
     </script>
   </body>
 </html>
