--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
         display: flex;
         justify-content: center; /* 수평 가운데 정렬 */
         align-items: center; /* 수직 가운데 정렬 */
+        height: 100vh;
+        margin: 0;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+      }
+
+      section {
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
       }
 
       .modal {
@@ -51,7 +69,7 @@
       }
 
       #map {
-        width: 100%;
+        width: 500px;
         height: 100%;
         filter: none;
         transition: filter 0.2s;
@@ -64,6 +82,10 @@
       #site-header {
         background-color: #cfe5d8d3;
         height: 65px;
+        width: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 
       #logo {
@@ -83,6 +105,29 @@
         padding: 10px 20px;
         text-align: center;
       }
+
+      footer {
+        background-color: #cfe5d8d3;
+        padding: 10px 0;
+        text-align: center;
+        width: 100%;
+      }
+      footer ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+      }
+      footer li {
+        display: inline;
+        margin: 0 15px;
+      }
+      footer a {
+        text-decoration: none;
+        color: #333;
+      }
+      footer a:hover {
+        text-decoration: underline;
+      }
     </style>
     <script
       type="text/javascript"
@@ -100,14 +145,22 @@
     </div>
     <!-- end 모달 팝업 -->
 
-    <main>
+    <div class="container">
       <header id="site-header">
         <div id="logo">GFOOD</div>
       </header>
       <section>
-        <div id="map" style="width: 500px; height: 600px"></div>
+        <div id="map"></div>
       </section>
-    </main>
+      <footer>
+        <ul>
+          <li><a href="search.html" id="search">검색</a></li>
+          <li><a href="reservation.html" id="reservation">예약</a></li>
+          <li><a href="profile.html" id="profile">회원정보</a></li>
+          <li><a href="index.html" id="back">홈</a></li>
+        </ul>
+      </footer>
+    </div>
 
     <script>
       const modal = document.querySelector(".modal");
@@ -154,6 +207,7 @@
                   `http://127.0.0.1:8000/stores/${store.idx}/menu`
                 );
                 const menuData = await menuResponse.json();
+                console.log(menuData);
                 var menuList = "";
                 for (i = 0; i < menuData.length; i++) {
                   menuList += `${menuData[i].name} : ${menuData[i].price}\n`;
