--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       var mapContainer = document.getElementById("map"); // 지도를 담을 영역의 DOM 레퍼런스
       var mapOption = {
         // 지도를 생성할 때 필요한 기본 옵션
-        center: new kakao.maps.LatLng(37.5745, 126.986), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(37.5206, 126.9945), // 지도의 중심좌표
         level: 4, // 지도의 레벨(확대, 축소 정도)
       };
       var map = new kakao.maps.Map(mapContainer, mapOption); // 지도 생성 및 객체 리턴
@@ -241,7 +241,8 @@
       // 마커를 표시할 위치와 내용을 가지고 있는 객체 배열입니다
       async function loadStores() {
         try {
-          const response = await fetch("http://localhost:8002/stores");
+          const location = map.getCenter();
+          const response = await fetch(`http://localhost:8002/stores?lat=${location.getLat()}&lng=${location.getLng()}`);
           const stores = await response.json();
           stores.forEach((store) => {
             let pos = new kakao.maps.LatLng(
@@ -304,8 +305,8 @@
         } catch (error) {
           console.error("Error fetching menu data:", error);
         }
-      }
-      loadStores();
+      };
+      kakao.maps.event.addListener(map, 'dragend', loadStores)
     </script>
   </body>
 </html>
